Major work done!

--- a/template.tex
+++ b/template.tex
@@ -57,14 +57,11 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{profile}
 \name{[firstname]}{[lastname]}
-\position{[position]{\enskip\cdotp\enskip}[position2]}
+\position{[branch]{\enskip\cdotp\enskip}[rollnum]}
 \address{[address]}
 
 \mobile{[mobile]}
 \email{[email]}
-\homepage{[homepage]}
-\github{[github]}
-\linkedin{[linkedin]}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -72,7 +69,7 @@
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``[quote]"}
+% \quote{``[quote]"}
 
 
 %-------------------------------------------------------------------------------
